# TypoDown

./: .gitignore  .theme-schema.json  Cargo.toml  README.md  flake.nix  package.json  tailwind.config.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-docs.yml  release.yml  test-docs.yml
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: reqwest_client.rs
crates/typodown_app/: Cargo.toml
crates/typodown_app/src/: document.rs  main.rs  workspace.rs
crates/typodown_app/src/app/: bootstrap.rs  editor_app.rs  menus.rs  mod.rs
crates/typodown_app/src/fixtures/: completion_items.json  test.json  test.md
crates/typodown_app/src/services/: assist.rs  mock.rs  mod.rs
crates/typodown_app/src/ui/: experimental_wysiwyg.rs  mod.rs
crates/typodown_core/: Cargo.toml
crates/typodown_core/examples/: brush.rs  dock.rs  editor.rs  html.rs  large-text.rs  markdown.rs  webview.rs
crates/typodown_core/examples/fixtures/: test.json  test.md
crates/typodown_core/src/: accordion_story.rs  alert_story.rs  app_menus.rs  badge_story.rs  button_story.rs  calendar_story.rs  checkbox_story.rs  clipboard_story.rs  date_picker_story.rs  description_list_story.rs  divider_story.rs  dropdown_button_story.rs  form_story.rs  icon_story.rs  image_story.rs  input_story.rs  kbd_story.rs  label_story.rs  lib.rs  main.rs  menu_story.rs  notification_story.rs  number_input_story.rs  popover_story.rs  progress_story.rs  radio_story.rs  resizable_story.rs  scrollbar_story.rs  select_story.rs  settings_story.rs  sheet_story.rs  sidebar_story.rs  slider_story.rs  switch_story.rs  table_story.rs  tabs_story.rs  tag_story.rs  textarea_story.rs  themes.rs  title_bar.rs  (+5 more)
crates/typodown_core/src/chart_story/: chart_story.rs
crates/typodown_gallery/: Cargo.toml
crates/typodown_gallery/examples/: tiles.rs
crates/typodown_gallery/examples/fixtures/: test.rs
crates/typodown_gallery/src/: avatar_story.rs  collapsible_story.rs  color_picker_story.rs  description_list_story.rs  dialog_story.rs  divider_story.rs  form_story.rs  group_box_story.rs  input_story.rs  lib.rs  list_story.rs  main.rs  menu_story.rs  notification_story.rs  otp_input_story.rs  settings_story.rs  skeleton_story.rs  spinner_story.rs  textarea_story.rs  themes.rs  title_bar.rs  toggle_story.rs  webview_story.rs  welcome_story.rs
crates/typodown_gallery/src/chart_story/: stacked_bar_chart.rs
script/: bootstrap  bump-version.sh  install-window.ps1
src/: App.vue  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/editor/: MilkdownEditor.vue
src/components/layout/: EditorLayout.vue
src/components/sidebar/: DocumentOutline.vue  FileTree.vue
src/components/toolbar/: Toolbar.vue  WindowControls.vue
src/stores/: fileStore.ts
src/styles/: macos-theme.css
src/types/: file.ts  index.d.ts
themes/: adventure.json  alduin.json  ayu.json  catppuccin.json  everforest.json  fahrenheit.json  flexoki.json  gruvbox.json  harper.json  hybrid.json  jellybeans.json  kibble.json  macos-classic.json  matrix.json  mellifluous.json  molokai.json  solarized.json  spaceduck.json  tokyonight.json  twilight.json
