[workspace]
default-members = [
    "crates/typodown_app",
]
members = [
    "crates/typodown_app",
]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
gpui-component = "0.5.0"
gpui-component-macros = "0.5.0" 
gpui-component-assets = "0.5.0"
typodown_core = { path = "crates/typodown_core" }

gpui = "0.2.2"
gpui-macros = "0.2.2"
reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }

anyhow = "1"
log = "0.4"
lsp-types = { version = "0.97.0", features = ["proposed"] }
notify = "7.0.0"
raw-window-handle = "0.6.2"
ropey = { version = "=2.0.0-beta.1", features = [
    "metric_lines_lf",
    "metric_utf16",
] }
rust-i18n = "3"
schemars = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
smallvec = "1"
smol = "2"
tracing = "0.1.41"

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
version = "0.58.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]
