[package]
name = "typodown_core"
version = "0.1.0"
publish = false
edition.workspace = true
autoexamples = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
reqwest_client = { path = "../reqwest_client" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints]
workspace = true
