[package]
name = "typodown_gallery"
version = "0.1.0"
publish = false
edition.workspace = true
autoexamples = false

[features]
inspector = ["gpui-component/inspector"]

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = [
  "tree-sitter-languages",
  "webview",
] }
gpui-component-assets.workspace = true
reqwest_client = { path = "../reqwest_client" }
directories.workspace = true

autocorrect = "2.14.2"
chrono = "0.4"
color-lsp = "0.2.0"
fake = { version = "2.10.0", features = ["dummy"] }
itertools = "0.14.0"
lsp-types.workspace = true
rand = "0.8"
raw-window-handle = { version = "0.6", features = ["std"] }
regex = "1"
serde = "1"
serde_json = "1"
smol.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tree-sitter-navi = "0.2.2"
unindent = "0.2.3"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

[lints]
workspace = true
